# sonictool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sonictool/: __init__.py  cli.py
sonictool/commands/: convert.py  info.py  merge.py  normalize.py  rename.py  trim.py
sonictool/utils/: audio.py  display.py
tests/: test_cli.py
